--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,7 @@
 		Hello World!
 	</h1>
 <body>
-	<p>
-		this is the first paragraph
-
-	</p>
+	<p>this is the first paragraph/n</p>
+	<p>This is the secnd paragraph</p>
 </body>
 </html>
