--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
 	</h1>
 <body>
 	<p>this is the first paragraph/n</p>
-	<p>This is the secnd paragraph</p>
+	<p>This is the secnd paragraph/n</p>
+	<p>This is the third paragraph</p>
 </body>
 </html>
