--- a/hello.html
+++ b/hello.html
@@ -1,10 +1,11 @@
 <html>
-	<h>
+	<h1>
 		Hello World!
 	</h1>
 <body>
-	<p>this is the first paragraph/n</p>
-	<p>This is the secnd paragraph/n</p>
-	<p>This is the third paragraph</p>
+	<h2>This is the title</h2>
+	<p>this is the first line</p>
+	<p>This is the secnd line</p>
+	<p>This is the third line</p>
 </body>
 </html>
